--- a/references/Introduction.bib
+++ b/references/Introduction.bib
@@ -158,7 +158,7 @@ keywords = {}
 
 @book{gibbs2018,
 	title = {Hydrology and Hydrodynamics of the Lower Lakes, Coorong and Murray Mouth},
-	author = {Gibbs M,  and Joehnk K, and Webster I, and Heneker T},
+	author = {Gibbs, M,  and Joehnk, K, and Webster, I, and Heneker, T},
 	booktitle = {Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe)},
 	editor = {{Mosley}, {Luke} and {Ye}, {Qifeng} and {Shepherd}, {Scoresby} and {Hemming}, {Steve} and {Fitzpatrick}, {Rob}},
 	publisher = {Royal Society of South Australia. University of Adelaide Press},
@@ -172,7 +172,7 @@ keywords = {}
 
 @book{barnett2018,
 	title = {Hydrogeology of the Lower Lakes and Coorong Region},
-	author = {Barnett S},
+	author = {Barnett, S},
 	booktitle = {Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe)},
 	editor = {{Mosley}, {Luke} and {Ye}, {Qifeng} and {Shepherd}, {Scoresby} and {Hemming}, {Steve} and {Fitzpatrick}, {Rob}},
 	publisher = {Royal Society of South Australia. University of Adelaide Press},
