--- a/references/Oxygen.bib
+++ b/references/Oxygen.bib
@@ -46,3 +46,303 @@ pages = {134--144},
 volume = {91}, 
 keywords = {}
 }
+@article{barnes1980,
+	title = {BARNES, R. S. K. 1980. Coastal lagoons. Cambridge Univ. Press, New York. 106 p. {\$}29.50, hardcover; {\$}11.25, softcover.},
+	author = {{Barnes}, {R.S.K.}},
+	year = {1980},
+	journal = {Limnology and Oceanography},
+	pages = {396--397},
+	volume = {27},
+	number = {2},
+	doi = {10.4319/lo.1982.27.2.0396},
+	url = {http://dx.doi.org/10.4319/lo.1982.27.2.0396},
+	langid = {en}
+}
+
+@article{knoppers1991,
+	title = {Trophic state and water turn-over time in six choked coastal lagoons in Brazil},
+	author = {{Knoppers}, {Bastiaan} and {Kjerfve}, {Bj?rn} and {Carmouze}, {Jean-Pierre}},
+	year = {1991},
+	date = {1991},
+	journal = {Biogeochemistry},
+	volume = {14},
+	number = {2},
+	doi = {10.1007/bf00002903},
+	url = {http://dx.doi.org/10.1007/BF00002903},
+	langid = {en}
+}
+
+
+@article{newton2005,
+	title = {Lagoon-sea exchanges, nutrient dynamics and water quality management of the Ria Formosa (Portugal)},
+	author = {{Newton}, {Alice} and {Mudge}, {Stephen M.}},
+	year = {2005},
+	month = {02},
+	date = {2005-02},
+	journal = {Estuarine, Coastal and Shelf Science},
+	pages = {405--414},
+	volume = {62},
+	number = {3},
+	doi = {10.1016/j.ecss.2004.09.005},
+	url = {http://dx.doi.org/10.1016/j.ecss.2004.09.005},
+	langid = {en}
+}
+
+@article{zhang2011,
+	title = {Effect of Temperature and Salinity on Phosphate Sorption on Marine Sediments},
+	author = {{Zhang}, {Jia-Zhong} and {Huang}, {Xiao-Lan}},
+	year = {2011},
+	month = {07},
+	date = {2011-07-19},
+	journal = {Environmental Science & Technology},
+	pages = {6831--6837},
+	volume = {45},
+	number = {16},
+	doi = {10.1021/es200867p},
+	url = {http://dx.doi.org/10.1021/es200867p},
+	langid = {en}
+}
+
+
+
+@article{isaji2019,
+	title = {Efficient recycling of nutrients in modern and past hypersaline environments},
+	author = {{Isaji}, {Y.} and {Kawahata}, {H.} and {Ogawa}, {N. O.} and {Kuroda}, {J.} and {Yoshimura}, {T.} and {Jiménez-Espejo}, {F. J.} and {Makabe}, {A.} and {Shibuya}, {T.} and {Lugli}, {S.} and {Santulli}, {A.} and {Manzi}, {V.} and {Roveri}, {M.} and {Ohkouchi}, {N.}},
+	year = {2019},
+	month = {03},
+	date = {2019-03-06},
+	journal = {Scientific Reports},
+	volume = {9},
+	number = {1},
+	doi = {10.1038/s41598-019-40174-9},
+	url = {http://dx.doi.org/10.1038/s41598-019-40174-9},
+	langid = {en}
+}
+@report{mosley2020,
+  title = {Coorong water quality synthesis with a focus on the drivers of eutrophication},
+  author = {Mosley, LM, and Priestley, S, and Brookes, J, and Dittmann, S, and Farkaš, J, and Farrell, M, and Ferguson, AJ, and Gibbs, M, and Hipsey, M, and Huang, J, and Lam-Gordillo, O, and Simpson, SL, and Teasdale, PR, and Tyler, JJ, and Waycott, M, and Welsh, DT},
+  year = {2020},
+  journal = {Goyder Institute for Water Research Technical Report Series No. 20/10},
+  url = {http://www.goyderinstitute.org/_r3428/media/system/attrib/file/699/TI_1.1.2_TRS_20-10_Nutrient%20Synthesis_2020-08-26_Final%20v2.pdf}
+}
+
+@article{enrich-prast2015,
+	title = {Sediment Denitrification in Two Contrasting Tropical Shallow Lagoons},
+	author = {{Enrich-Prast}, {Alex} and {Santoro}, {Ana Lúcia} and {Coutinho}, {Rodrigo S.} and {Nielsen}, {Lars Peter} and {Esteves}, {Francisco A.}},
+	year = {2015},
+	month = {08},
+	date = {2015-08-12},
+	journal = {Estuaries and Coasts},
+	pages = {657--663},
+	volume = {39},
+	number = {3},
+	doi = {10.1007/s12237-015-0017-5},
+	url = {http://dx.doi.org/10.1007/s12237-015-0017-5},
+	langid = {en}
+}
+
+
+
+@article{helder1983,
+	title = {Estuarine nitrite maxima and nitrifying bacteria (Ems-Dollard estuary)},
+	author = {{Helder}, {W.} and {De Vries}, {R.T.P.}},
+	year = {1983},
+	month = {10},
+	date = {1983-10},
+	journal = {Netherlands Journal of Sea Research},
+	pages = {1--18},
+	volume = {17},
+	number = {1},
+	doi = {10.1016/0077-7579(83)90002-9},
+	url = {http://dx.doi.org/10.1016/0077-7579(83)90002-9},
+	langid = {en}
+}
+
+
+@article{cui2016,
+	title = {The effects of salinity on nitrification using halophilic nitrifiers in a Sequencing Batch Reactor treating hypersaline wastewater},
+	author = {{Cui}, {You-Wei} and {Zhang}, {Hong-Yu} and {Ding}, {Jie-Ran} and {Peng}, {Yong-Zhen}},
+	year = {2016},
+	month = {04},
+	date = {2016-04-25},
+	journal = {Scientific Reports},
+	volume = {6},
+	number = {1},
+	doi = {10.1038/srep24825},
+	url = {http://dx.doi.org/10.1038/srep24825},
+	langid = {en}
+}
+
+@article{sundareshwar1999,
+	title = {Phosphorus sorption characteristics of intertidal marsh sediments along an estuarine salinity gradient},
+	author = {{Sundareshwar}, {P. V.} and {Morris}, {James T.}},
+	year = {1999},
+	month = {10},
+	date = {1999-10-26},
+	journal = {Limnology and Oceanography},
+	pages = {1693--1701},
+	volume = {44},
+	number = {7},
+	doi = {10.4319/lo.1999.44.7.1693},
+	url = {http://dx.doi.org/10.4319/lo.1999.44.7.1693},
+	langid = {en}
+}
+
+@article{crowe2012,
+	title = {Anammox, denitrification and fixed-nitrogen removal in sediments from the Lower St. Lawrence Estuary},
+	author = {{Crowe}, {S. A.} and {Canfield}, {D. E.} and {Mucci}, {A.} and {Sundby}, {B.} and {Maranger}, {R.}},
+	year = {2012},
+	month = {11},
+	date = {2012-11-07},
+	journal = {Biogeosciences},
+	pages = {4309--4321},
+	volume = {9},
+	number = {11},
+	doi = {10.5194/bg-9-4309-2012},
+	url = {http://dx.doi.org/10.5194/bg-9-4309-2012},
+	langid = {en}
+}
+
+@article{qin2006,
+	title = {Estimation of internal nutrient release in large shallow Lake Taihu, China},
+	author = {{Qin}, {Boqiang} and {Zhu}, {Guangwei} and {Zhang}, {Lu} and {Luo}, {Liancong} and {Gao}, {Guang} and {Gu}, {Binhe}},
+	year = {2006},
+	month = {05},
+	date = {2006-05},
+	journal = {Science in China Series D},
+	pages = {38--50},
+	volume = {49},
+	number = {S1},
+	doi = {10.1007/s11430-006-8104-x},
+	url = {http://dx.doi.org/10.1007/s11430-006-8104-x},
+	langid = {en}
+}
+@article{fan2001,
+author = {Fan, Chengxin and Zhang, Leven and Qu, W},
+year = {2001},
+month = {11},
+pages = {406-10},
+title = {Lake sediment resuspension and caused phosphate release- A simulation study},
+volume = {13},
+journal = {Journal of environmental sciences (China)}
+}
+@article{reddy1996,
+	title = {Resuspension and Diffusive Flux of Nitrogen and Phosphorus in a Hypereutrophic Lake},
+	author = {{Reddy}, {K. R.} and {Fisher}, {M. M.} and {Ivanoff}, {D.}},
+	year = {1996},
+	month = {03},
+	date = {1996-03},
+	journal = {Journal of Environmental Quality},
+	pages = {363--371},
+	volume = {25},
+	number = {2},
+	doi = {10.2134/jeq1996.00472425002500020022x},
+	url = {http://dx.doi.org/10.2134/jeq1996.00472425002500020022x},
+	langid = {en}
+}
+@book{gelencser1982,
+  title = {A Study on the Influence of Sediment in the Phosphorus Cycle in Lake Balaton},
+  author = {Gelencser, P. and Szilagyi, F. and Somlyody, L. and Lijklema, L.},
+  year = {1982},
+  publisher={IIASA Collaborative Paper. IIASA, Laxenburg, Austria: CP-82-044},
+  doi = {},
+  url = {https://pure.iiasa.ac.at/id/eprint/2074/}
+}
+
+@article{huang2016,
+	title = {Effects of internal loading on phosphorus distribution in the Taihu Lake driven by wind waves and lake currents},
+	author = {{Huang}, {Lei} and {Fang}, {Hongwei} and {He}, {Guojian} and {Jiang}, {Helong} and {Wang}, {Changhui}},
+	year = {2016},
+	month = {12},
+	date = {2016-12},
+	journal = {Environmental Pollution},
+	pages = {760--773},
+	volume = {219},
+	doi = {10.1016/j.envpol.2016.07.049},
+	url = {http://dx.doi.org/10.1016/j.envpol.2016.07.049},
+	langid = {en}
+}
+
+@article{sondergaard1992,
+	title = {Phosphorus release from resuspended sediment in the shallow and wind-exposed Lake Arres?, Denmark},
+	author = {{Sondergaard}, {Martin} and {Kristensen}, {Peter} and {Jeppesen}, {Erik}},
+	year = {1992},
+	month = {01},
+	date = {1992-01},
+	journal = {Hydrobiologia},
+	pages = {91--99},
+	volume = {228},
+	number = {1},
+	doi = {10.1007/bf00006480},
+	url = {http://dx.doi.org/10.1007/BF00006480},
+	langid = {en}
+}
+
+
+@article{sloth1996,
+	title = {Resilience of Pelagic and Benthic Microbial Communities to Sediment Resuspension in a Coastal Ecosystem, Knebel Vig, Denmark},
+	author = {{Sloth}, {Niels Peter} and {Riemann}, {Bo} and {Nielsen}, {Lars Peter} and {Blackburn}, {T.}},
+	year = {1996},
+	month = {04},
+	date = {1996-04},
+	journal = {Estuarine, Coastal and Shelf Science},
+	pages = {405--415},
+	volume = {42},
+	number = {4},
+	doi = {10.1006/ecss.1996.0027},
+	url = {http://dx.doi.org/10.1006/ecss.1996.0027},
+	langid = {en}
+}
+
+@article{tang2020,
+	title = {Dynamic behavior of sediment resuspension and nutrients release in the shallow and wind-exposed Meiliang Bay of Lake Taihu},
+	author = {{Tang}, {Chunyan} and {Li}, {Yiping} and {He}, {Chao} and {Acharya}, {Kumud}},
+	year = {2020},
+	month = {03},
+	date = {2020-03},
+	journal = {Science of The Total Environment},
+	pages = {135131},
+	volume = {708},
+	doi = {10.1016/j.scitotenv.2019.135131},
+	url = {http://dx.doi.org/10.1016/j.scitotenv.2019.135131},
+	langid = {en}
+}
+
+@article{joint2002,
+	title = {Competition for inorganic nutrients between phytoplankton and bacterioplankton in nutrient manipulated mesocosms},
+	author = {{Joint}, {I} and {Henriksen}, {P} and {Fonnes}, {GA} and {Bourne}, {D} and {Thingstad}, {TF} and {Riemann}, {B}},
+	year = {2002},
+	date = {2002},
+	journal = {Aquatic Microbial Ecology},
+	pages = {145--159},
+	volume = {29},
+	doi = {10.3354/ame029145},
+	url = {http://dx.doi.org/10.3354/ame029145},
+	langid = {en}
+}
+
+@article{griffin2001,
+	title = {Modelling the impact of zooplankton grazing on phytoplankton biomass during a dinoflagellate bloom in the Swan River Estuary, Western Australia},
+	author = {{Griffin}, {Sandra L.} and {Herzfeld}, {Michael} and {Hamilton}, {David P.}},
+	year = {2001},
+	month = {01},
+	date = {2001-01},
+	journal = {Ecological Engineering},
+	pages = {373--394},
+	volume = {16},
+	number = {3},
+	doi = {10.1016/s0925-8574(00)00122-1},
+	url = {http://dx.doi.org/10.1016/S0925-8574(00)00122-1},
+	langid = {en}
+}
+
+@inbook{kjerfve1994,
+	title = {Coastal Lagoon Processess},
+	author = {{Kjerfve}, {Björn}},
+	year = {1994},
+	date = {1994},
+	publisher = {Elsevier},
+	pages = {vii--x},
+	doi = {10.1016/s0422-9894(08)70004-7},
+	url = {http://dx.doi.org/10.1016/S0422-9894(08)70004-7}
+}
