--- a/references/Resuspension.bib
+++ b/references/Resuspension.bib
@@ -68,7 +68,7 @@ keywords = {}
   title = {Principles of sediment transport in rivers, estuaries, and coastal seas},
   author = {	L C van Rijn},
   year = {1993},
-  journal = { Aqua Publications},
+  publisher = { Aqua Publications},
   doi = {},
   url = {}
 }
@@ -87,4 +87,25 @@ doi = {10.1201/b10262-11}
 	year = {2021},
 	journal = {Goyder Institute for Water Research Interim Report },
 	url = {}
+}
+@book{julien2010, 
+place={Cambridge}, 
+edition={2}, 
+title={Erosion and Sedimentation}, 
+DOI={10.1017/CBO9780511806049}, 
+publisher={Cambridge University Press}, 
+author={Julien, Pierre Y.}, 
+year={2010}}
+
+@article{lee2005,
+author = {Lee, In-Mo and Sung, Sang-Gyu and Cho, Gye-Chun},
+title = {Effect of stress state on the unsaturated shear strength of a weathered granite},
+journal = {Canadian Geotechnical Journal},
+volume = {42},
+number = {2},
+pages = {624-631},
+year = {2005},
+doi = {10.1139/t04-091},
+URL = {https://doi.org/10.1139/t04-091},
+abstract = { The effect of stress state on the unsaturated shear strength of a Korean residual soil was studied using modified triaxial tests. Experimental results show that the soil-water characteristic curve and shear strength of this soil are significantly affected by the change of net normal stresses. This effect should be taken into consideration in the model to precisely describe the shear strength envelope of unsaturated soils. Thus, a new model for estimation of unsaturated shear strength is proposed using the soil-water characteristic curve and the saturated shear strength parameters.Key words: prediction model, soil-water characteristic curve, matric suction, triaxial test, unsaturated shear strength. }
 }
