--- a/cdm_integrated_assessment.Rmd
+++ b/cdm_integrated_assessment.Rmd
@@ -4,12 +4,12 @@
 
 ## Overview
 
-The previous chapters have detailed the nature of the model setup, additions and areas of development. In this section, the model is assessed in its entirety, for each version of the fully coupled model, against the complete dataset. The approach to assess the model aims to follow the CSPS framework of Hipsey et al. (2020). The framework considers: 
+The previous chapters have detailed the nature of the model setup, additions and areas of development. In this section, the model is assessed in its entirety, for each version of the fully coupled model, against the complete dataset. The approach to assess the model aims to follow the CSPS framework of [@hipsey2020]. The framework considers:
 
-- *Level 0*: conceptual evaluation; the conceptual diagrams for each of the water quality variables, biogeochemical reactions, and habitat modelling are based on the scientific review and data inspection as detailed in the previous chapters;
-- *Level 1*: simulated state variables; a range of metrics is used for a large number of predicted variable and different sites.
-- *Level 2*: process rates; and 
-- *Level 3*: system-level patterns and emergent properties; this is evaluated by the overall nutrient budget analysis, nutrient cycling pathway analysis, and assessment of the relationship between the areas of habitat for Ruppia and Ulva.
+-   *Level 0*: conceptual evaluation; the conceptual diagrams for each of the water quality variables, biogeochemical reactions, and habitat modelling are based on the scientific review and data inspection as detailed in the previous chapters;
+-   *Level 1*: simulated state variables; a range of metrics is used for a large number of predicted variable and different sites.
+-   *Level 2*: process rates; and
+-   *Level 3*: system-level patterns and emergent properties; this is evaluated by the overall nutrient budget analysis, nutrient cycling pathway analysis, and assessment of the relationship between the areas of habitat for Ruppia and Ulva.
 
 The specific data available for validation and the assessment metrics used are described next. The level of model uncertainty is discussed in terms of how much confidence is in the current generation of model outputs for the purposes of defining model reliability. As the model is continuously evolving, we report performance based on the model generation.
 
@@ -21,13 +21,13 @@ In addition to the model performance assessment, the model is also routinely use
 
 A summary of the model lineage and provenance of the different simulations that have been assessed include:
 
-<span style="color:teal">**Generation 0** model</span> : Original mesh, 2D hydrodynamics, no surface wave coupling, 1 overall phytoplankton functional group, 5 sediment zones with statically assigned flux rates based on assumed parameters.
+[**Generation 0** model]{style="color:teal"} : Original mesh, 2D hydrodynamics, no surface wave coupling, 1 overall phytoplankton functional group, 5 sediment zones with statically assigned flux rates based on assumed parameters.
 
-<span style="color:orangered">**Generation 1** model</span> : Original mesh, 2D hydrodynamics, no surface wave coupling, 1 overall phytoplankton functional group, 5 sediment zones with statically assigned flux rates, updated based on observed estimates.
+[**Generation 1** model]{style="color:orangered"} : Original mesh, 2D hydrodynamics, no surface wave coupling, 1 overall phytoplankton functional group, 5 sediment zones with statically assigned flux rates, updated based on observed estimates.
 
-<span style="color:brown">**Generation 1.5** model</span> : Original mesh, 2D hydrodynamics, surface wave coupling, 4 phytoplankton functional groups, 31 sediment zones with statically assigned flux rates based on observed parameters.
+[**Generation 1.5** model]{style="color:brown"} : Original mesh, 2D hydrodynamics, surface wave coupling, 4 phytoplankton functional groups, 31 sediment zones with statically assigned flux rates based on observed parameters.
 
-<span style="color:darkblue">**Generation 2** model</span> : Habitat optimised mesh, 2D/3D hydrodynamics, surface wave coupling, 4 phytoplankton functional groups, 31 sediment zones including optional simulation of dynamic, depth-resolved sediment properties, revised life-stage specific macroalgae model, and updated Ruppia habitat thresholds. Uses the 2.0.5 release AED code-base.
+[**Generation 2** model]{style="color:darkblue"} : Habitat optimised mesh, 2D/3D hydrodynamics, surface wave coupling, 4 phytoplankton functional groups, 31 sediment zones including optional simulation of dynamic, depth-resolved sediment properties, revised life-stage specific macroalgae model, and updated Ruppia habitat thresholds. Uses the 2.0.5 release AED code-base.
 
 The results from Generation 0 model and Generation 1 model have been reported separately (and their results archived in [Appendix B : Results Archive]). In this chapter, we focus on the results from the Generation 1.5 and Generation 2 simulations that include the model developments related to the biogeochemistry and habitat, as detailed in the previous chapters. To access a specific model version, refer to the CDM version downloads within GitHub.
 
@@ -39,27 +39,26 @@ The results from Generation 0 model and Generation 1 model have been reported se
 
 The field observation data available for the model validation and assessment include a diversity of historical data (collected pre 2020), and a large volume of data generated by recent monitoring and HCHB research projects. Relevant data for validation include:
 
-- In situ water quality sensors; high frequency measurements at fixed locations.
-- Water quality grab samples
-- Biotic surveys
-- Strategic experimental data.
+-   In situ water quality sensors; high frequency measurements at fixed locations.
+-   Water quality grab samples
+-   Biotic surveys
+-   Strategic experimental data.
 
-All the data relevant to model calibration and validation are included in the *CDM Data Catalogue* (see Section 3.2) and detailed in [Appendix A](Appendix A : Data Catalogue). The data spans a wide range of locations and time-periods; the most intense period of monitoring is however between 2020-2021 and this serves as the primary model assessment focus period. Long-term assessments are also undertaken for different versions of the model, as outlined next.
-
+All the data relevant to model calibration and validation are included in the *CDM Data Catalogue* (see Section 3.2) and detailed in [Appendix A](Appendix%20A%20:%20Data%20Catalogue). The data spans a wide range of locations and time-periods; the most intense period of monitoring is however between 2020-2021 and this serves as the primary model assessment focus period. Long-term assessments are also undertaken for different versions of the model, as outlined next.
 
 ### Performance assessment metrics
 
-The modelling results are compared against historical data collected within the Coorong (where available), using both traditional statistical metrics of model error, and other metrics relevant to model performance. The approach is applied to each model generation with the aim to identify areas where the model is accurate, and areas for further improvement and ongoing calibration effort. 
+The modelling results are compared against historical data collected within the Coorong (where available), using both traditional statistical metrics of model error, and other metrics relevant to model performance. The approach is applied to each model generation with the aim to identify areas where the model is accurate, and areas for further improvement and ongoing calibration effort.
 
-**Error metrics** : Initially, the model performance in predicting a range of relevant variables including salinity, temperature, nitrogen, phosphorus and total chlorophyll-a are assessed with a set of statistical metrics, and the calculations of statistical metrics was performed for each observation site where the number of field observations was >10 in the assessment period. 
+**Error metrics** : Initially, the model performance in predicting a range of relevant variables including salinity, temperature, nitrogen, phosphorus and total chlorophyll-a are assessed with a set of statistical metrics, and the calculations of statistical metrics was performed for each observation site where the number of field observations was \>10 in the assessment period.
 
 The core statistical metrics considered consist of:
 
-  +	$r$: regression coefficient, Varies between -1 and 1, with a score of 1 indicating the model varies perfectly with the observations and a negative score indicating the model varies inversely with the observations. A consistent bias may be present even when high score of r is obtained. 
-  +	$BIAS$: bias of average prediction to the average observation during the assessing period. This method presents a magnitude for the discrepancy between the model results and the observational data. 
-  +	$MAE$: mean absolute error: Similar to RMSE except absolute value is used. This reduces the bias towards large events. Values near zero indicate good model skill.
-  +	$RMS$: root mean squared error, Measures the mean magnitude, but not direction, of the difference between model data and observations, and hence can be used to measure bias. Values near zero are desirable. This method is not affected by cancellation of negative and positive errors, but squaring the data may cause bias towards large events.
-  +	$nash$: the Nash-Sutcliffe metric (also called $NSE$ or $MEF$ is a matrix of modelling efficiency, measures the mean magnitude of the difference between model data and observations. This method compares the performance of the model to that only uses the mean of the observed data. A value of 1 would indicate a perfect model, while a value of zero indicates performance similar to simply using the mean of observed data.
+-   $r$: regression coefficient, Varies between -1 and 1, with a score of 1 indicating the model varies perfectly with the observations and a negative score indicating the model varies inversely with the observations. A consistent bias may be present even when high score of r is obtained.
+-   $BIAS$: bias of average prediction to the average observation during the assessing period. This method presents a magnitude for the discrepancy between the model results and the observational data.
+-   $MAE$: mean absolute error: Similar to RMSE except absolute value is used. This reduces the bias towards large events. Values near zero indicate good model skill.
+-   $RMS$: root mean squared error, Measures the mean magnitude, but not direction, of the difference between model data and observations, and hence can be used to measure bias. Values near zero are desirable. This method is not affected by cancellation of negative and positive errors, but squaring the data may cause bias towards large events.
+-   $nash$: the Nash-Sutcliffe metric (also called $NSE$ or $MEF$ is a matrix of modelling efficiency, measures the mean magnitude of the difference between model data and observations. This method compares the performance of the model to that only uses the mean of the observed data. A value of 1 would indicate a perfect model, while a value of zero indicates performance similar to simply using the mean of observed data.
 
 **Seasonality** : The model results are assessed in terms of the degree of seasonal fluctuation, as seen in the field data. Whilst this is captured in the error metrics (e.g. R, the visual assessment can assess timing issues related with seasonal peaks.
 
@@ -67,41 +66,37 @@ The core statistical metrics considered consist of:
 
 **Advanced measures** : The model results were finally assessed considered that partitioning of nutrients in terms of inorganic vs organic, and other expected measures.
 
-**Confidence** : Based on the above assessment we evaluate confidence in the model by assigning each variable to the following categories: 
+**Confidence** : Based on the above assessment we evaluate confidence in the model by assigning each variable to the following categories:
 
--	Good
--	Acceptable, and
--	Caution. 
+-   Good
+-   Acceptable, and
+-   Caution.
 
-This confidence evaluation, considers: 
+This confidence evaluation, considers:
 
--	Quality of observed data, which is influenced by field and laboratory data limitations, methodologies, processes and protocols. 
--	Error metric scores relative to what is typically reported in the literature for water quality models (e.g., Arhonditsis and Brett, 2004).
--	Ability of the CDM to capture the mean of an indicator and its spatial gradient and seasonality.
--	Partitioning of water quality constituents within different ecosystem pools. 
--	Natural variability of the indicator at different temporal scales (i.e. sub-daily to seasonal).
+-   Quality of observed data, which is influenced by field and laboratory data limitations, methodologies, processes and protocols.
+-   Error metric scores relative to what is typically reported in the literature for water quality models (e.g., @arhonditsis2004 ).
+-   Ability of the CDM to capture the mean of an indicator and its spatial gradient and seasonality.
+-   Partitioning of water quality constituents within different ecosystem pools.
+-   Natural variability of the indicator at different temporal scales (i.e. sub-daily to seasonal).
 
 <br>
 
 ## Assessment and validation periods
 
--	*CIIP period*: 2013-2019: initial assessment prior to availability of HCHB research project data;
--	*Focus period*: 2020-2021: initial calibrated against the intensive field sampling and observations obtained from different components of the HCHB research project;
--	*Long-term performance*: 2017 – 2021: calibrated against the long-term water quality data collected from the routine measurements, as well as from the HCHB research project. These results are summarised here.
+-   *CIIP period*: 2013-2019: initial assessment prior to availability of HCHB research project data;
+-   *Focus period*: 2020-2021: initial calibrated against the intensive field sampling and observations obtained from different components of the HCHB research project;
+-   *Long-term performance*: 2017 -- 2021: calibrated against the long-term water quality data collected from the routine measurements, as well as from the HCHB research project. These results are summarised here.
 
 <br>
-
 
 ## Integrated simulation performance
 
 ### Generation 0
 
-With the <span style="color:teal">*Generation 0* model</span> compiled boundary conditions (tide, barrages, Salt Ck inflows) and BARRA weather forcing, the performance of the model in reproducing the long-term nutrient pools has been examined.
-<!--
+With the [*Generation 0* model]{style="color:teal"} compiled boundary conditions (tide, barrages, Salt Ck inflows) and BARRA weather forcing, the performance of the model in reproducing the long-term nutrient pools has been examined. <!--
 Example model outcomes against the field observations of TN and TP are shown in Figure 10 & 11, and a summary of model performance is provided in Table 1. In summary, the model predicted well the temporal and spatial variations in TN and TP concentrations. However, the model has been shown to poorly predict the phytoplankton concentration in the South Coorong. A reason for this may be due to the current CDM being in in 2D mode which assumes the water column is fully mixed; whilst the phytoplankton samples were taken in the surface water where the phytoplankton can accumulate. The release of bioavailable nutrients is also subject to change once the sediment modelling is completed and the accuracy resolving bioavailable nutrients is still weak. A further examination of phytoplankton and nutrient data is underway, and a 3D Coorong model is under development to capture the vertical distribution of phytoplankton biomass.
--->
-A summary of model performance is provided in Table 6.1. The full set of time-series validation plots against comparing the model with field observations of salinity, temperature, phytoplankton, and nitrogen/phosphorus species are included in Appendix B1. In summary, the <span style="color:teal">*Generation 0* </span> model predicted well the temporal and spatial variations in TN and TP concentrations. However, this version of the model poorly predicted the phytoplankton concentration in the South Lagoon. A reason for this may be due to the fact that this version is run in 2D mode which assumes the water column is fully mixed; whilst the phytoplankton samples were taken in the surface water where the phytoplankton can accumulate.
-
+--> A summary of model performance is provided in Table 6.1. The full set of time-series validation plots against comparing the model with field observations of salinity, temperature, phytoplankton, and nitrogen/phosphorus species are included in Appendix B1. In summary, the [*Generation 0* ]{style="color:teal"} model predicted well the temporal and spatial variations in TN and TP concentrations. However, this version of the model poorly predicted the phytoplankton concentration in the South Lagoon. A reason for this may be due to the fact that this version is run in 2D mode which assumes the water column is fully mixed; whilst the phytoplankton samples were taken in the surface water where the phytoplankton can accumulate.
 
 ```{r ass-pic0, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Performance summary of CDM (Gen 0) simulating long-term TCHLA, TN and TP concentrations."}
 
@@ -109,17 +104,16 @@ knitr::include_graphics("tables/error.png")
 
 ```
 
-The release of bioavailable nutrients is also subject to change once the sediment modelling is completed and the accuracy resolving bioavailable nutrients is still weak. Examination of phytoplankton and nutrient data (see CDM sensitivity assessment to internal loading in appendix B2), and implmentation of 3D dynamics is under development with the Generation I model to capture the vertical distribution of phytoplankton biomass.  
+The release of bioavailable nutrients is also subject to change once the sediment modelling is completed and the accuracy resolving bioavailable nutrients is still weak. Examination of phytoplankton and nutrient data (see CDM sensitivity assessment to internal loading in appendix B2), and implmentation of 3D dynamics is under development with the Generation I model to capture the vertical distribution of phytoplankton biomass.
 
+### Generation 1.5 {.panelset}
 
-### Generation 1.5 {.panelset} 
+With the [**Generation I.5** model]{style="color:brown"} compiled boundary conditions (tide, barrage flows, Salt Ck inflows) and weather forcing data from Narrung, the performance of the model in reproducing the long-term nutrient pools has been examined in detail. A brief summary of model performance is provided in Table 6.1. The full set of time-series validation plots against comparing the model with field observations of salinity, temperature, phytoplankton, and nitrogen/phosphorus species are included in Appendix B1. In summary, the Generation I.5 model generally predicted well in most of the variables, including temperature, salinity, TN, TOC, DOC, ammonium and TSS. However, the results in total chlorophyll-a (TCHLA), TP, PO4 and turbidity are relatively poor. On the top of model setting reasons, some reasons for this also come from the data quality, such as:
 
-With the <span style="color:brown">**Generation I.5** model</span> compiled boundary conditions (tide, barrage flows, Salt Ck inflows) and weather forcing data from Narrung, the performance of the model in reproducing the long-term nutrient pools has been examined in detail. A brief summary of model performance is provided in Table 6.1. The full set of time-series validation plots against comparing the model with field observations of salinity, temperature, phytoplankton, and nitrogen/phosphorus species are included in Appendix B1. In summary, the Generation I.5 model generally predicted well in most of the variables, including temperature, salinity, TN, TOC, DOC, ammonium and TSS. However, the results in total chlorophyll-a (TCHLA), TP, PO4 and turbidity are relatively poor. On the top of model setting reasons, some reasons for this also come from the data quality, such as:
+1.  The concentration of some of the nutrient species (such as ammonium, nitrate, and phosphate) are lower than the laboratory detective limits, therefore not able to properly evaluate the performance in these species; an example of this is shown in Figure 6.1, which shows the measured nitrate concentration was consistent at 0.003 mg/L (the lowest laboratory detective level for nitrate at UA) from 07/2018 to 01/2020 in zone 42.
+2.  The field observational data were provided from different labs, where the data quality was not consistent; an example of this is shown in Figure 6.2, which shows the TP concentration varied between 0.1-0.4 mg/L before 07/2020, then raised to \>5 mg/L after the data source changed to ALS from 07/2020. A similar plot for TN is provided in Figure 6.3, where the TN time series pattern also changed from 07/2020.
 
-1.	The concentration of some of the nutrient species (such as ammonium, nitrate, and phosphate) are lower than the laboratory detective limits, therefore not able to properly evaluate the performance in these species; an example of this is shown in Figure 6.1, which shows the measured nitrate concentration was consistent at 0.003 mg/L (the lowest laboratory detective level for nitrate at UA) from 07/2018 to 01/2020 in zone 42. 
-2.	The field observational data were provided from different labs, where the data quality was not consistent; an example of this is shown in Figure 6.2, which shows the TP concentration varied between 0.1-0.4 mg/L before 07/2020, then raised to >5 mg/L after the data source changed to ALS from 07/2020. A similar plot for TN is provided in Figure 6.3, where the TN time series pattern also changed from 07/2020.
-
-Given the fact that the ALS dataset largely departs from the historical data range, a new validation was performed with all existing data except the ALS dataset. A separate summary of model performance is provided in Table \@ref(fig:ass-ass001), and the full set of time series validation plots are included in [Appendix B](Appendix B : Results Archive). It can be seen from Table \@ref(fig:ass-ass15_1) - \@ref(fig:ass-ass15_1) that all performance scores of CDM are significantly improved and the performance in most of the water quality prediction are satisfying.
+Given the fact that the ALS dataset largely departs from the historical data range, a new validation was performed with all existing data except the ALS dataset. A separate summary of model performance is provided in Table \@ref(fig:ass-ass001), and the full set of time series validation plots are included in [Appendix B](Appendix%20B%20:%20Results%20Archive). It can be seen from Table \@ref(fig:ass-ass15_1) - \@ref(fig:ass-ass15_1) that all performance scores of CDM are significantly improved and the performance in most of the water quality prediction are satisfying.
 
 <center>
 
@@ -158,10 +152,9 @@ knitr::include_graphics(c("images/assessment/table 6_1-performance table1.png","
 
 ```
 
-
 <br>
 
-### Generation 2 {.panelset} 
+### Generation 2 {.panelset}
 
 The error metrics for the Generation 2.0 simulation are shown below.
 
@@ -185,11 +178,11 @@ knitr::include_graphics(c("images/assessment/GEN2 performance - all data - table
 
 <br>
 
-## Nutrient budget assessment 
+## Nutrient budget assessment
 
-### Nutrient budgets {.panelset} 
+### Nutrient budgets {.panelset}
 
-A methodology for nutrient flux and budget analysis has been developed. For the nutrient budget analysis, all of the nutrient pools (dissolved and particulate carbon, nitrogen and phosphorus, macroalgae and Ruppia) can be summarized for different regions of the estuary (north, south etc.). As an example of this method, the results from a period of four years (01/01/2018 to 01/01/2022) were summarized for nitrogen budgeting of NCL and SCL region in Figure 6.4 and 6.5, respectively. The nutrient budgeting analysis showed that the dissolved organic matter is the major nitrogen pool in both the lagoons, while particle organic matter and the nitrogen assimilated by phytoplankton also presented to be major nutrient pools (panel “a”). The sediment diffusion release of ammonium and the nitrogen loss due to phytoplankton burial into the sediment dominate the interaction at the sediment-water interface (panel “b”), which also presented a clear seasonal pattern. The boundary exchange fluxes are dominated by the organic matters in coincident to the major pools in the water (panel “c”). The daily change flux rate varied between 0 to >20 tonne/day in the north lagoon, compared to that of between 0 to ~10 tonnes/day in the south lagoon, indicating stronger hydrodynamic transportation in the north lagoon affected by tidal intrusion and barrage flow. The results showed a net cumulative of nutrient in the sediment (panel “d”), indicating the sediment acting as a sink for the nutrients.
+A methodology for nutrient flux and budget analysis has been developed. For the nutrient budget analysis, all of the nutrient pools (dissolved and particulate carbon, nitrogen and phosphorus, macroalgae and Ruppia) can be summarized for different regions of the estuary (north, south etc.). As an example of this method, the results from a period of four years (01/01/2018 to 01/01/2022) were summarized for nitrogen budgeting of NCL and SCL region in Figure 6.4 and 6.5, respectively. The nutrient budgeting analysis showed that the dissolved organic matter is the major nitrogen pool in both the lagoons, while particle organic matter and the nitrogen assimilated by phytoplankton also presented to be major nutrient pools (panel "a"). The sediment diffusion release of ammonium and the nitrogen loss due to phytoplankton burial into the sediment dominate the interaction at the sediment-water interface (panel "b"), which also presented a clear seasonal pattern. The boundary exchange fluxes are dominated by the organic matters in coincident to the major pools in the water (panel "c"). The daily change flux rate varied between 0 to \>20 tonne/day in the north lagoon, compared to that of between 0 to \~10 tonnes/day in the south lagoon, indicating stronger hydrodynamic transportation in the north lagoon affected by tidal intrusion and barrage flow. The results showed a net cumulative of nutrient in the sediment (panel "d"), indicating the sediment acting as a sink for the nutrients.
 
 #### NITROGEN (**CSL**) {.unnumbered}
 
@@ -242,20 +235,19 @@ knitr::include_graphics("images/assessment/6_nutrient_budgeting_summary_plot.png
 
 ## Environmental response function (ERF) analysis
 
-A useful method for applying the model is to construct environmental response function (ERFs); these can be used to predict water quality variables in estuary/lagoon sub-domains in response to changes in boundary forcing, and can therefore provide a simple and quick assessment of the occurrence of some target events. As an example, the environmental response of salinity, TN and TP in space and time is compared for a scenario assessing the delivery of water for the environment. This compares how the lagoon differs in repsonse to water being provided as an "[environmental flow](https://vimeo.com/715481753)" (e.g. see Brookes et al. 2022). Two simulations are compared:
+A useful method for applying the model is to construct environmental response function (ERFs); these can be used to predict water quality variables in estuary/lagoon sub-domains in response to changes in boundary forcing, and can therefore provide a simple and quick assessment of the occurrence of some target events. As an example, the environmental response of salinity, TN and TP in space and time is compared for a scenario assessing the delivery of water for the environment. This compares how the lagoon differs in repsonse to water being provided as an "[environmental flow](https://vimeo.com/715481753)" (e.g. see @brookes2022 ). Two simulations are compared:
 
- - ‘all water’ : representing the base-case scenario where water was delivered over the barrages as actually occurred, and 
- - ‘no-eWater’ : representing a counter-factual situation when there was no environmental water delivered across the barrages
+-   'all water' : representing the base-case scenario where water was delivered over the barrages as actually occurred, and
+-   'no-eWater' : representing a counter-factual situation when there was no environmental water delivered across the barrages
 
-The results demonstrate that, under the current condition, the annual-average salinity presented an increase from north the south, and the condition stayed similar from 2017 to 2021; while if there is no environmental water contribution (the ‘no-eWater’ scenario), the salinity would had increased from about 150 PSU in 2017 to near 190 PSU in 2021 (Figure \@ref(fig:ass-erf)). The nutrient levels showed an increase from north to south, and also increased with time in both scenarios. However, if there is no environmental water contribution, the TN and TP in the south lagoon would have increased at a faster pace. In summary, the environmental water has shown to help to reduce the salinity level as well as the trophic statues of the Coorong, and show how the model can be used to develop 'look-up' tables for expected benefits of a given change in operation, without running the full model. 
+The results demonstrate that, under the current condition, the annual-average salinity presented an increase from north the south, and the condition stayed similar from 2017 to 2021; while if there is no environmental water contribution (the 'no-eWater' scenario), the salinity would had increased from about 150 PSU in 2017 to near 190 PSU in 2021 (Figure \@ref(fig:ass-erf)). The nutrient levels showed an increase from north to south, and also increased with time in both scenarios. However, if there is no environmental water contribution, the TN and TP in the south lagoon would have increased at a faster pace. In summary, the environmental water has shown to help to reduce the salinity level as well as the trophic statues of the Coorong, and show how the model can be used to develop 'look-up' tables for expected benefits of a given change in operation, without running the full model.
 
 ```{r ass-erf, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Environmental response functions (ERF) of salinity, TN, and TP in space and time of the Coorong for the base-case scenario (left panel) and an example ‘no e-Water’ scenario (right panel)."}
 
 knitr::include_graphics("images/assessment/7_ERF_plot.png")
 ```
 
-
-## Habitat condition assessment {.panelset} 
+## Habitat condition assessment {.panelset}
 
 The overall habitat suitability for sexual and asexual reproduction between 2018 - 2021 have been simulated using the Gen 2 model (Figure \@ref(fig:HSIsexual4) and Figure \@ref(fig:HSIasexual4)). The results show that habitat quality and suitable area can shift from year to year. For exmaple, in comparison, 2021 offered the least amount of suitable habitat for *Ruppia* to complete its sexual life cycle (flowering), which was consistent with field observations in that very few flowers were recorded in 2021 compared to 2020.
 
@@ -275,14 +267,11 @@ knitr::include_graphics("images/lagoon_habitat/HSI sexual 4yrs.png")
 knitr::include_graphics("images/lagoon_habitat/HSI asexual 4yrs.png")
 ```
 
-
 <br>
-
 
 ## Coorong Decision Making Framework (DMF)
 
 To facilitate management decision making, and comprehensive list of customised model post-processing exports has been created. The Decision Making Framework (DMF) exports encompass a wide range of critical "CPS" indicators. These are defined in Table \@ref(tab:ass-dmftable).
-
 
 ```{r ass-dmftable, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
@@ -351,7 +340,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 Outputs are initially grouped based upon the style of calculation required.
 
-An example of the outputs can be found  in Table \@ref(tab:ass-DMFexportexample).
+An example of the outputs can be found in Table \@ref(tab:ass-DMFexportexample).
 
 ```{r ass-DMFexportexample, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
@@ -379,35 +368,36 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 In addition to the required DMF value, time series plots are also produced to provide context to the data analyst.
 
 <center>
+
 ```{r ass-pic2, echo = FALSE, out.width='50%', class = "text-image", fig.cap = "Critial CPS for macroinvertabrates where Average daily area (Km2) with water cover and Salinity is < 25 g/L Apr-Sep"}
 
 knitr::include_graphics('images/cdm/DMF_Example.png')
 
 ```
+
 </center>
 
 ## Summary
 
 A series of integrated CDM assessment toolbox has been developed that are able to:
 
-- Accomodate data from different sources/campaigns (see Appendix A)
-- Flexible plotting of time-series outputs at points and integrated over polygons
-- Plotting of transects
-- Map outputs integrated over selected time-windows (e.g. month or season)
-- Nutrient budget on defined polygon regions
-- Error metric assessment
-- Habitat area calculation
-    
-Looking holistically at the statistic results in the long-term simulation, the CDM appeared to capture the salinity and temperature changes, and also the TN, TP and dissolved oxygen variation compared to the observational data in most regions. Reasonable predictions were obtained for other nutrient species. The Ruppia HSI shows reasonable performance against field sample data and the predicted macroalgae biomass reasonably captures the spatial distribution of filamentous algae. As is expected for these type of simulations (e.g., see Arhondistsis and Brett 2004), model performance is much better for the hydrodynamic variables (salinity and temperature) than for the nutrient and biological properties. It is particularly challenging to get high model performance scores when values have high inherent variance, and/or are near to the detection limit. This was the case for many variables assessed in this study, particularly the bioavailable nutrients, and the error metric numbers should be considered with the data quality issues in mind as discussed in Chapter 9.4.2. 
+-   Accomodate data from different sources/campaigns (see Appendix A)
+-   Flexible plotting of time-series outputs at points and integrated over polygons
+-   Plotting of transects
+-   Map outputs integrated over selected time-windows (e.g. month or season)
+-   Nutrient budget on defined polygon regions
+-   Error metric assessment
+-   Habitat area calculation
 
-Overall, the model performance is consistent in both the focus period (2020-2021) and the long-term simulation (2017-2021) when adopting the same water quality modules and model parameters, suggesting in its present form the model is suitable for assessing the management scenarios associated with water management. 
-These results show the promise of the model and give direction to focus areas for development and calibration. Key challenges in model setup, calibration and use for scenario assessment appear to be:
+Looking holistically at the statistic results in the long-term simulation, the CDM appeared to capture the salinity and temperature changes, and also the TN, TP and dissolved oxygen variation compared to the observational data in most regions. Reasonable predictions were obtained for other nutrient species. The Ruppia HSI shows reasonable performance against field sample data and the predicted macroalgae biomass reasonably captures the spatial distribution of filamentous algae. As is expected for these type of simulations (e.g., see @arhonditsis2004 ), model performance is much better for the hydrodynamic variables (salinity and temperature) than for the nutrient and biological properties. It is particularly challenging to get high model performance scores when values have high inherent variance, and/or are near to the detection limit. This was the case for many variables assessed in this study, particularly the bioavailable nutrients, and the error metric numbers should be considered with the data quality issues in mind as discussed in Chapter 9.4.2.
 
--	Salinity calibration in the South Lagoon has remained problematic in some years
--	Resolving organic matter partitioning, and reaction rates
--	Constraining the sediment flux rates of nutrients, considering spatial variability
--	Chlorophyll-a biomass
--	Macroalgal biomass and timing
+Overall, the model performance is consistent in both the focus period (2020-2021) and the long-term simulation (2017-2021) when adopting the same water quality modules and model parameters, suggesting in its present form the model is suitable for assessing the management scenarios associated with water management. These results show the promise of the model and give direction to focus areas for development and calibration. Key challenges in model setup, calibration and use for scenario assessment appear to be:
+
+-   Salinity calibration in the South Lagoon has remained problematic in some years
+-   Resolving organic matter partitioning, and reaction rates
+-   Constraining the sediment flux rates of nutrients, considering spatial variability
+-   Chlorophyll-a biomass
+-   Macroalgal biomass and timing
 
 Looking at these key challenges, some areas for CDM improvement in the next phase modelling development are summarised in Table \@ref(tab:ass-gaps).
 
@@ -445,7 +435,3 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
    # scroll_box(fixed_thead = FALSE)
   
 ```
-
-
-    
-    
